# ChangeLog for media-video/cheese
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/cheese/ChangeLog,v 1.37 2010/10/29 21:33:44 pacho Exp $

*cheese-2.32.0 (29 Oct 2010)

  29 Oct 2010; Pacho Ramos <pacho@gentoo.org> -cheese-2.28.1-r1.ebuild,
  +cheese-2.32.0.ebuild:
  Version bump for Gnome 2.32 with bugfixes and translation updates. Also
  require gtk+ with jpeg support (bug #338198 by klondike).

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org> cheese-2.30.1.ebuild:
  alpha/ia64/sparc stable wrt #324077

  09 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> cheese-2.30.1.ebuild:
  ppc64 stable wrt #324077

  20 Sep 2010; Pacho Ramos <pacho@gentoo.org> cheese-2.30.1.ebuild:
  Add media-libs/gst-plugins-good RDEPEND back as reported by klondike in
  bug #338127.

  13 Sep 2010; Gilles Dartiguelongue <eva@gentoo.org> -cheese-2.24.3.ebuild,
  -cheese-2.26.3.ebuild, cheese-2.30.1.ebuild:
  Add missing gtk-doc, docbook-xml-dtd DEPEND. Keep dbus[X] from previous
  revisions that was forgotten in overlay.

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org> cheese-2.30.1.ebuild:
  Marked ppc for bug #324077.

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> cheese-2.28.1-r1.ebuild:
  alpha/ia64/sparc stable

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> cheese-2.28.1-r1.ebuild,
  cheese-2.30.1.ebuild:
  Marked ~ppc for bug #313563.

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org> cheese-2.30.1.ebuild:
  x86 stable, bug 324077

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> cheese-2.30.1.ebuild:
  amd64 stable, bug 324077

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  cheese-2.28.1-r1.ebuild:
  Keyword ~ppc64 wrt #313563

  15 Jun 2010; Pacho Ramos <pacho@gentoo.org> cheese-2.30.1.ebuild:
  Raise udev dependency as it requires 'extras', bug #323993 by Panard

*cheese-2.30.1 (13 Jun 2010)

  13 Jun 2010; Pacho Ramos <pacho@gentoo.org> +cheese-2.30.1.ebuild:
  Add new version for Gnome 2.30.
